--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,49 @@
 .header{
-    padding: 10px;
-    display: flex;
-    
-
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    padding: 0.75rem;
+    background-color: rgba(0, 0, 0, 0.829);
+    width: fit-content;
+    z-index: 1000;
+    margin: 0.5rem;
+    border-radius: 2rem;
 }
-ul{
+.header ul{
     flex-direction: row;
     display: flex;
-    padding: 1rem;
-    gap: 1rem;
+    gap: 0.1rem;
     color: black;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
+.header li{
+    text-align: center;
+    display: inline-block;
+    margin: 0 7px;
+    font-size: 1.5rem;
+}
+
+.header i{
+    color: white;
+    
+}
+
+.header i:hover{
+    color: rgba(255, 255, 255, 0.74);
+}
+
+.header .active{
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #007bff; /* Välj färg på din bar */
+    border-radius: 2px;
+}
