--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
-<html lang="en">
+<html lang="se">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Header</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="/stylesheet.css">
 </head>
@@ -10,7 +10,7 @@
     <div class="header">
         <nav>
             <ul>
-                <li><a href="/" class="nav"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="/index.html" class="nav"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="/about/" class="nav"><i class="fa-solid fa-circle-info"></i></a></li>
                 <li><a href="/work/" class="nav"><i class="fa-solid fa-briefcase"></i></a></li>
                 <li><a href="/contact/" class="nav"><i class="fa-solid fa-envelope"></i></a></li>
