very nice bar, no more github pages

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,11 +10,11 @@
     <div class="header">
         <nav>
             <ul>
-                <li><a href="/index.html" class="nav"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="/about/" class="nav"><i class="fa-solid fa-circle-info"></i></a></li>
-                <li><a href="/work/" class="nav"><i class="fa-solid fa-briefcase"></i></a></li>
-                <li><a href="/contact/" class="nav"><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href="https://github.com/4lbinP" target="_blank" class="nav"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="/"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="/about/"><i class="fa-solid fa-circle-info"></i></a></li>
+                <li><a href="/work/"><i class="fa-solid fa-briefcase"></i></a></li>
+                <li><a href="/contact/"><i class="fa-solid fa-envelope"></i></a></li>
+                <li><a href="https://github.com/4lbinP" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </nav>
     </div>
