--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,6 +30,8 @@
 
 .header i{
     color: white;
+    position: relative;
+    display: inline-block;
     
 }
 
@@ -37,13 +39,14 @@
     color: rgba(255, 255, 255, 0.74);
 }
 
-.header .active::after{
+
+.header .active::after {
     content: "";
     position: absolute;
-    bottom: -4px;
+    bottom: -0.4rem;
     left: 0;
     width: 100%;
-    height: 3px;
-    background-color: #007bff; /* Välj färg på din bar */
+    height: 4px;
+    background-color: #007BFF; /* blå färg */
     border-radius: 2px;
-}
+  }
