gihub pages test

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,16 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="/Portfolio/stylesheet.css">
 </head>
 <body>
     <div class="header">
         <nav>
             <ul>
-                <li><a href="/"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="/about/"><i class="fa-solid fa-circle-info"></i></a></li>
-                <li><a href="/work/"><i class="fa-solid fa-briefcase"></i></a></li>
-                <li><a href="/contact/"><i class="fa-solid fa-envelope"></i></a></li>
+                <li><a href="/Portfolio/"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="/Portfolio/about/"><i class="fa-solid fa-circle-info"></i></a></li>
+                <li><a href="/Portfolio/work/"><i class="fa-solid fa-briefcase"></i></a></li>
+                <li><a href="/Portfolio/contact/"><i class="fa-solid fa-envelope"></i></a></li>
                 <li><a href="https://github.com/4lbinP" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </nav>
