--- a/templates/header.css
+++ b/templates/header.css
@@ -47,6 +47,7 @@
     left: 0;
     width: 100%;
     height: 4px;
-    background-color: #007BFF; /* blå färg */
+    background-color: #007BFF;
     border-radius: 2px;
-  }
+}
+
