--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,7 @@
     <title>Header</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="/Portfolio/templates/header.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="header">
