--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,9 @@
-body {
-    background: linear-gradient(135deg, oklch(20.8% 0.042 265.755), oklch(55.4% 0.042 265.755) 100%, oklch(55.4% 0.042 265.755));
+#bg {
+    position: fixed;
     background-attachment: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, rgb(15, 23, 43), rgb(103, 115, 140) 100%, rgb(103, 115, 140));
 }
