--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,29 @@
 #bg {
     position: fixed;
-    background-attachment: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
     background: linear-gradient(135deg, rgb(15, 23, 42), rgb(100, 116, 139) 100%, rgb(100, 116, 139));
+}
+
+body {
+    display: flex;
+    justify-content: center;
+}
+
+main {
+    margin-top: 5rem;
+    width: 80%;
+}
+
+#welcome {
+    text-align: center;
+    font-weight: 600;
+    font-size: 4rem;
+    padding-top: 2rem;
+    border-top: solid rgb(233, 205, 255);
+    color: aliceblue;
+    
 }
