--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,14 +40,11 @@ main {
     width: 100%;
     margin: 0;
     position: relative;
+    overflow: hidden;
 }
 
 .bubble {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background: rgba(173, 216, 230, 0.7);
-    border: 2px solid white;
     cursor: pointer;
+    border-radius: 50%;
 }
