--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,7 @@
                 <li><a href="/Portfolio/about/"><i class="fa-solid fa-circle-info"></i></a></li>
                 <li><a href="/Portfolio/work/"><i class="fa-solid fa-briefcase"></i></a></li>
                 <li><a href="/Portfolio/contact/"><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href="https://github.com/4lbinP" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://github.com/4lbinP" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </nav>
     </div>
