--- a/templates/footer.css
+++ b/templates/footer.css
@@ -1,11 +1,35 @@
-ul {
+footer ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
+    text-align: center;
 }
 
-img {
+footer img {
     width: 2rem;
     height: auto;
+    position: relative;
 }
 
+footer li {
+    text-align: center;
+    display: inline-block;
+}
+
+body {
+    text-align: center;
+    width: 80%;
+    height: auto;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer * {
+    outline: 1px solid red;
+  }
+  
+  html, body {
+    overflow-x: hidden;
+  }
