--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="/Portfolio/templates/footer.css">
 </head>
 <body>
+    <div class="footer">
     <h3>My socials</h3>
     <ul>
         <li><a href="https://www.instagram.com/4lbinp/" target="_blank" rel="noopener noreferrer"><img src="/Portfolio/pictures/Instagram_Glyph_Gradient.png" alt="Instagram"></a></li>
     </ul>
     <p>&copy; Albin Persson 2025</p>
+    </div>
 </body>
 </html>
