--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,11 +11,15 @@
 body {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    margin-bottom: 0;
+    min-height: 100vh;
 }
 
 main {
-    margin-top: 0rem;
     width: 90%;
+    margin: 3rem auto 0 auto;
+    flex: 1;
 }
 
 #welcome {
@@ -27,7 +31,7 @@ main {
     font-style: normal;
     font-optical-sizing: auto;
     margin: 0;
-    margin-top: 3rem;
+    margin-top: 0rem;
     margin-bottom: 1rem;
 }
 
@@ -46,3 +50,4 @@ main {
     cursor: pointer;
     border-radius: 50%;
 }
+
