--- a/templates/footer.css
+++ b/templates/footer.css
@@ -3,34 +3,33 @@ footer ul {
     flex-direction: row;
     list-style-type: none;
     text-align: center;
+    gap: 0.2rem;
 }
 
 footer img {
     width: 2rem;
     height: auto;
-    position: relative;
 }
 
 footer li {
+    margin: 7px;
     text-align: center;
-    display: inline-block;
 }
 
 .footer {
     text-align: center;
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
     height: auto;
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-footer * {
-    outline: 1px solid red;
-}
-
-html, body {
-    overflow: hidden;
+    background-color: rgb(0, 0, 0, 0.5);
+    margin-top: 2rem;
+    border: 2px rgb(0, 0, 0) solid;
+    color: aliceblue;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border-radius: 10rem;
 }
