--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,6 +10,7 @@
     <h3>My socials</h3>
     <ul>
         <li><a href="https://www.instagram.com/4lbinp/" target="_blank" rel="noopener noreferrer"><img src="/Portfolio/pictures/Instagram_Glyph_Gradient.png" alt="Instagram"></a></li>
+        <li><a href="https://x.com/4lbinP" target="_blank" rel="noopener noreferrer"><img src="/Portfolio/pictures/logo.svg" alt="X"></a></li>
     </ul>
     <p>&copy; Albin Persson 2025</p>
     </div>
