--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ body {
 
 main {
     width: 90%;
-    margin: 3rem auto 0 auto;
+    margin: 3.5rem auto 0 auto;
     flex: 1;
 }
 
@@ -51,3 +51,18 @@ main {
     border-radius: 50%;
 }
 
+#about {
+    font-family: "Josefin sans", sans-serif;
+    color: aliceblue;
+}
+
+#about h1 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 5rem;
+    font-style: normal;
+    font-optical-sizing: auto;
+    margin: 0;
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+}
