--- a/stylesheet.css
+++ b/stylesheet.css
@@ -143,10 +143,6 @@ main {
     word-break: break-all;
 }
 
-#tools {
-    
-}
-
 #tools h2 {
     text-align: center;
     margin: 10px;
@@ -197,4 +193,40 @@ main {
     width: 40px;
     height: 40px;
     object-fit: contain;
+}
+
+#contact {
+    font-family: "Josefin sans", sans-serif;
+    color: aliceblue;
+    line-height: 1.1;
+}
+
+#contact h1 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 5rem;
+    font-style: normal;
+    font-optical-sizing: auto;
+    margin: 0;
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+}
+
+#contact p {
+    text-align: center;
+    font-style: italic;
+    line-height: 1.1;
+}
+
+#contact ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    text-align: center;
+    font-size: 3rem;
+}
+
+#contact a {
+    color: aliceblue;
 }
